# RustOS

./: Cargo.toml
.cargo/: config.toml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
scripts/: setup-git-hooks.sh
src/: lib.rs  main.rs  vga_buffer.rs
tests/: basic_boot.rs
