[package]
name = "RustOS"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "RustOS"
path = "src/main.rs"
test = false
bench = false

[dependencies]
bootloader = "=0.9"
lazy_static = { version = "1.5", default-features = false, features = ["spin_no_std"] }
spin = "0.10.0"
volatile = "0.2.6"



